# tg_job_recommender

./: bot.py  pyproject.toml  telegram_job_bot_project.md
src/telegram_job_bot/: __init__.py  __main__.py  adzuna_client.py  bot.py  config.py  database.py  keywords.py  recommender.py
tests/: test_keywords.py  test_recommender.py
